# Discord-Bot

./: Cargo.toml  Readme.md
src/: image_processing.rs  main.rs
